fixed tag alignment in tables

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -44,6 +44,21 @@
     text-align: center;
 }
 
+.tag-cell {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    table & {
+        display: flex !important;
+    }
+
+    & kbd {
+        padding: 0 0.25rem;
+        margin-right: 0.375rem;
+    }
+}
+
 .danger {
     --pico-background-color: var(--pico-color-red-600);
     --pico-border-color: var(--pico-color-red-600);
