--- a/client/styles/schedule.css
+++ b/client/styles/schedule.css
@@ -14,8 +14,3 @@ div[role="heading"] h3 {
     margin-left: 0;
     margin-right: auto;
 }
-
-table kbd {
-    padding: 0 0.25rem;
-    margin-right: 0.375rem;
-}
