--- a/client/styles/sector.css
+++ b/client/styles/sector.css
@@ -15,14 +15,3 @@ header {
 .card-header h3 {
     margin-bottom: 0;
 }
-
-.tag-row {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.tag-row kbd {
-    padding: 0 0.25rem;
-    margin-right: 0.375rem;
-}
